--- a/mailexpress-ui/src/main/webapp/form/folder.xhtml
+++ b/mailexpress-ui/src/main/webapp/form/folder.xhtml
@@ -10,7 +10,7 @@
         <h:outputLabel value="#{msg['folder_name']}" for="folderName"/>
         <h:inputText id="folderName" value="#{folderFormData.name}"/>
         <a4j:commandButton action="#{folderController.saveFolder}" value="#{msg['save']}" render="tree"/>
-        <a4j:commandButton onclick="#{rich:component('folderPopup')}.hide()" value="#{msg['cancel']}"/>
+        <a4j:commandButton onclick="#{rich:component('folderPane')}.hide()" value="#{msg['cancel']}"/>
     </h:form>
 </ui:composition>
 </html>
