--- a/mailexpress-ui/src/main/webapp/resources/msgdata/msgSummary.xhtml
+++ b/mailexpress-ui/src/main/webapp/resources/msgdata/msgSummary.xhtml
@@ -6,25 +6,40 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:rich="http://richfaces.org/rich"
       xmlns:a4j="http://richfaces.org/a4j"
-      xmlns:composite="http://java.sun.com/jsf/composite" xmlns:attachment="http://noveogroup.com/">
+      xmlns:composite="http://java.sun.com/jsf/composite"
+      xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:attachment="http://noveogroup.com/">
 
 <composite:interface>
     <composite:attribute name="message"/>
 </composite:interface>
 
 <composite:implementation>
-    <h:panelGrid columns="2">
+    <h:panelGrid>
         <rich:panel bodyClass="msg-summary">
             <h:panelGrid columns="2" styleClass="w3">
-                <h:outputLabel for="subject" value="#{msg['subject']}: "/>
-                <h:outputText id="subject" value="#{cc.attrs.message.subject}"/>
-                <h:outputLabel for="sentDate" value="#{msg['send_date']}: "/>
-                <h:outputText id="sentDate" value="#{cc.attrs.message.date}"/>
-                <h:outputLabel for="sender" value="#{msg['sender']}: "/>
-                <h:outputText id="sender" value="#{cc.attrs.message.sender}"/>
+                <h:panelGrid columns="2">
+                    <h:outputLabel for="subject" value="#{msg['subject']}: "/>
+                    <h:outputText id="subject" value="#{cc.attrs.message.subject}"/>
+                    <h:outputLabel for="sentDate" value="#{msg['send_date']}: "/>
+                    <h:outputText id="sentDate" value="#{cc.attrs.message.date}"/>
+                    <h:outputLabel for="sender" value="#{msg['sender']}: "/>
+                    <h:outputText id="sender" value="#{cc.attrs.message.sender}"/>
+                </h:panelGrid>
+                <rich:dropDownMenu mode="ajax" styleClass="msg-summary" rendered="#{cc.attrs.message.withAttachment}">
+                    <f:facet name="label">
+                        <h:panelGrid cellpadding="0" cellspacing="0" columns="2" style="vertical-align:middle">
+                            <h:graphicImage library="img" name="attachment_big.png"/>
+                        </h:panelGrid>
+                    </f:facet>
+                    <c:forEach items="#{cc.attrs.message.attachments}" var="item">
+                        <rich:menuItem title="#{item.path}">
+                            <attachment:attachment>#{item.path}</attachment:attachment>
+                        </rich:menuItem>
+                    </c:forEach>
+
+                </rich:dropDownMenu>
             </h:panelGrid>
         </rich:panel>
-        <attachment:attachment/>
     </h:panelGrid>
 </composite:implementation>
 
