--- a/mailexpress-ui/src/main/webapp/menu.xhtml
+++ b/mailexpress-ui/src/main/webapp/menu.xhtml
@@ -26,26 +26,16 @@
             </rich:tree>
 
             <rich:contextMenu target="tree" mode="ajax">
-                <rich:menuItem label="#{msg['new_folder']}" render="popupContent"
+                <rich:menuItem label="#{msg['new_folder']}"
                                oncomplete="#{rich:component('folderPane')}.show()"
                                mode="ajax" icon="#{resource['img:new_folder.png']}"/>
-
-                <rich:menuItem label="#{msg['rename']}" render="popupContent"
-                               oncomplete="#{rich:component('folderPane')}.show()"
+                <rich:menuItem label="#{msg['rename']}" onclick="openFolderForm('rename')"
                                mode="ajax" icon="#{resource['img:rename.png']}"/>
-
-                <rich:menuItem label="#{msg['delete']}" render="popupContent"
-                               oncomplete="#{rich:component('folderPane')}.show()"
-                               mode="ajax" icon="#{resource['img:delete.png']}"/>
+                <rich:menuItem label="#{msg['delete']}" mode="ajax" icon="#{resource['img:delete.png']}"
+                               execute="@this" render="@none"
+                               onclick="#{rich:component('confirmFolderPane')}.show()"/>
             </rich:contextMenu>
         </rich:panel>
     </h:form>
-
-    <rich:popupPanel id="confirmFolderPane" autosized="true">
-        #{msg['delete_folder_confirm_question']}
-        <a4j:commandButton value="#{msg['yes']}" onclick="remove(); return false;"/>
-        <a4j:commandButton value="#{msg['no']}" onclick="#{rich:component('confirmFolderPane')}.hide(); return false;"/>
-    </rich:popupPanel>
-
 </ui:composition>
 </html>
