--- a/mailexpress-ui/src/main/webapp/toolbar.xhtml
+++ b/mailexpress-ui/src/main/webapp/toolbar.xhtml
@@ -74,6 +74,13 @@
                            onclick="#{rich:component('confirmMessagePane')}.hide(); return false;"/>
     </rich:popupPanel>
 
+    <rich:popupPanel id="confirmMoveMessagePane" autosized="true">
+        #{msg['delete_message_confirm_question']}
+        <a4j:commandButton value="#{msg['ok']}" onclick="moveMessageToOtherFolder(); return false;"/>
+        <a4j:commandButton value="#{msg['cancel']}"
+                           onclick="#{rich:component('confirmMoveMessagePane')}.hide(); return false;"/>
+    </rich:popupPanel>
+
     <rich:popupPanel id="folderPane" modal="true" autosized="false" resizeable="true"
                      header="#{folderController.folderFormData.title}">
         <f:facet name="controls">
@@ -104,6 +111,9 @@
                     execute="@this">
         <a4j:param id="folderActionName" assignTo="#{folderController.actionName}"/>
     </a4j:jsFunction>
+
+    <a4j:jsFunction name="moveMessageToOtherFolder" action="#{messageController.moveToOtherFolder()}" render="msgTable" execute="@this"
+                    oncomplete="#{rich:component('confirmMoveMessagePane')}.hide();"/>
 
     <a4j:jsFunction name="removeMessage" action="#{messageController.remove}" render="msgTable" execute="@this"
                     oncomplete="#{rich:component('confirmMessagePane')}.hide();"/>
