--- a/mailexpress-ui/src/main/webapp/index.xhtml
+++ b/mailexpress-ui/src/main/webapp/index.xhtml
@@ -82,9 +82,9 @@
 </h:head>
 <h:body>
     <div class="outer-north container">
-        <a4j:outputPanel id="appTitle" styleClass="b center">
+        <a4j:outputPanel id="appTitle" styleClass="b center p1">
             <h:outputText value="#{folderController.selectedFolderName} - "
-                          rendered="#{folderController.selectedFolderName != null}"/> Mail Express
+                          rendered="#{folderController.selectedFolderName != null}"/> <span style="color: #ababab;">Mail Express</span>
         </a4j:outputPanel>
     </div>
 
